save as zip when multi language html input

--- a/csv-translation/.eslintrc
+++ b/csv-translation/.eslintrc
@@ -13,7 +13,8 @@
     "globals": {
         "Papa": true,
         "Encoding": true,
-        "saveAs": true
+        "saveAs": true,
+        "JSZip": true
     },
     "extends": "airbnb"
 }
